<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="button_1">Spotify Streamer</string>
    <string name="button_2">Scores App</string>
    <string name="button_3">Library App</string>
    <string name="button_4">Build it bigger</string>
    <string name="button_5">XYZ Reader</string>
    <string name="button_6">CAP Stone: My Own App</string>

    <string name="toast_base_message">This button will launch \u0020</string>


</resources>
